--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 # dependencies
 node_modules/
 
+# environment variables (contain sensitive credentials)
+.env.local
+.env.local.backup
+
 # Expo
 .expo/
 dist/
