--- a/app.json
+++ b/app.json
@@ -26,6 +26,9 @@
     "web": {
       "favicon": "./assets/images/favicon.png"
     },
+    "extra": {
+      "EXPO_PUBLIC_USDA_API_KEY": "E2WpkwatJoL2sT1T4PUgqFDxyWj8UU1oO5R0t3pj"
+    },
     "plugins": [
       [
         "expo-notifications",
