all checkpoint done before launch

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 EXPO_PUBLIC_SUPABASE_URL=your_supabase_url
 EXPO_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 
+# USDA FoodData Central
+EXPO_PUBLIC_USDA_API_KEY=your_usda_api_key
+
 # Google OAuth
 EXPO_PUBLIC_GOOGLE_CLIENT_ID=your_google_client_id
 EXPO_PUBLIC_GOOGLE_CLIENT_SECRET=your_google_client_secret
